--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ ext {
     lwjglVersion = '3.3.2'
     jomlVersion = "1.10.5"
     lwjglNatives = "natives-windows"
-    imguiVersion = '1.86.10'
+    //imguiVersion = '1.86.10'
 }
 
 group 'com.controllerface'
@@ -21,9 +21,9 @@ repositories {
 dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
 
-    implementation "io.github.spair:imgui-java-lwjgl3:$imguiVersion"
-    implementation "io.github.spair:imgui-java-binding:$imguiVersion"
-    implementation "io.github.spair:imgui-java-natives-windows-ft:$imguiVersion"
+    //implementation "io.github.spair:imgui-java-lwjgl3:$imguiVersion"
+    //implementation "io.github.spair:imgui-java-binding:$imguiVersion"
+    //implementation "io.github.spair:imgui-java-natives-windows-ft:$imguiVersion"
 
     implementation group: 'org.jocl', name: 'jocl', version: '2.0.5'
 
