--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
     implementation "org.lwjgl:lwjgl"
     implementation "org.lwjgl:lwjgl-assimp"
     implementation "org.lwjgl:lwjgl-glfw"
