more tight integration for CL data types, compaction kernels should now auto-generate most buffer types even if they change

--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
 
 ext {
     lwjglVersion = '3.3.3'
+    //lwjglVersion = '3.3.4-SNAPSHOT'
     jomlVersion = "1.10.5"
     lwjglNatives = "natives-windows"
 }
