switched model format over to glTF, FBX is broken in Assimp, and this is an open standard anyway

--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,8 @@ plugins {
 }
 
 ext {
-    lwjglVersion = '3.3.3'
-    //lwjglVersion = '3.3.4-SNAPSHOT'
+    //lwjglVersion = '3.3.3'
+    lwjglVersion = '3.3.4'
     jomlVersion = "1.10.5"
     lwjglNatives = "natives-windows"
 }
